--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
 - '2.7'
 - '3.3'
 - '3.4'
-install: pip install -r requirements.txt
+install:
+    - pip install -r requirements.txt
+    - pip install coveralls
 script: nosetests -v -w tests/  --with-cov --cov chatpy --cov-report term-missing
 env:
   global:
